added local news button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </form>
         <div id="map"></div>
         <div id="learn-more-container"></div>
+        <div id="local-news-container"></div>
     </main>
     <footer></footer>
     <script src="./assets/js/script.js"></script>
