--- a/index.html
+++ b/index.html
@@ -1,26 +1,101 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="no-js" lang="en">
 
 <head>
-    <title>Simple Map</title>
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Compressed CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css" integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>City Explorer</title>
 </head>
 
 <body>
-    <header></header>
-    <main>
-        <form id="zip-form">
-            <label class="form-label" for="zip-code"></label>
-            <input name="zip-code" id="zip-code" type="text" autofocus="true" />
-            <button type="submit" id="search-btn">Search</button>
-            <button type="button" id="clear-zip-codes">Clear Zip Codes</button>
-        </form>
-        <div id="map"></div>
-        <div id="learn-more-container"></div>
-        <div id="local-news-container"></div>
-    </main>
-    <footer></footer>
-    <script src="./assets/js/script.js"></script>
-</body>
+    <header class="hero">
+        <h1 class="title">City Explorer</h1>
+    </header>
 
+    <main>
+        <!--use Foundation grid for 3-column lay-out-->
+        <div class="grid-x grid-margin-x grid-margin-y container">
+
+            <!--column 1: search and saved zip codes-->
+            <div class="cell small-12 medium-4">
+
+                <!--column 1 wrapper-->
+                <div class="column-1">
+
+                    <!--search input area-->
+                    <form id="search-form" class="search-form">
+                        <label>Search for a Zip Code:</label>
+                        <input id="zip-input" class="zip-input">
+                        <button id="search-button" class="search-button">
+                            <i class="fas fa-search"></i>
+                        </button>
+                    </form>
+    
+                    <!--saved zipcode area-->
+                    <div class="save-area">
+                        <ul id="saved-zips" class="saved-zips">
+                            <!--random buttons. delete when functionality has been added.-->
+                            <button class="zip-button">90250</button>
+                            <button class="zip-button">90245</button>
+                        </ul>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <!--column 2: wikipedia area-->
+            <div class="cell small-12 medium-4">
+                <div id="wikipedia" class="card wikipedia">
+                    <!--delete all hard coded code and text when functionality has been added.-->
+                    <div class="card-divider">
+                        This is the wikipedia area.
+                    </div>
+                    <img id="wikipedia-pic" src="assets/images/wikipedia_pic.png">
+                    <div class="card-section">
+                        <h4>Dynamically create. This is for layout only.</h4>
+                    </div>
+                </div>
+            </div>
+
+            <!--column 3: map and news area-->
+            <div class="cell small-12 medium-4">
+
+                <!--column 3 wrapper-->
+                <div class="column-3">
+
+                    <div id="map-area" class="card map-area">
+                    <!--delete all hard coded code and text when functionality has been added.-->
+                        <div class="card-divider">
+                            This is the map area.
+                        </div>
+                        <img id="map-pic" src="assets/images/google_map_pic.png">
+                        <div class="card-section">
+                            <h4>Dynamically create. This is for layout only.</h4>
+                        </div>
+                    </div>
+
+                    <div id="news-area" class="card news-area">
+                    <!--delete all hard coded code and text when functionality has been added.-->
+                        <div class="card-divider">
+                            This is the news area.
+                        </div>
+                        <img id="news-pic" src="assets/images/news_pic.png">
+                        <div class="card-section">
+                            <h4>Dynamically create. This is for layout only.</h4>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </main>
+
+    <script src="https://use.fontawesome.com/releases/v5.14.0/js/all.js" data-auto-replace-svg="nest"></script>
+    <!-- <script src="./assets/js/script.js"></script> -->
+</body>
 </html>
