--- a/index.html
+++ b/index.html
@@ -101,33 +101,34 @@
             <div class="cell small-12 medium-4">
 
                 <!--column 3 wrapper-->
-                <div class="column-3">
+                <!-- <div class="column-3">
 
-                    <div id="map-area" class="card map-area">
+                    <div id="map-area" class="card map-area"> -->
 
                         <!--hard code start-->
                         <!--delete all hard coded code and text when functionality has been added.-->
                         <!--class of "card-divider" needs to be used to create a card header in Foundation styling-->
-                        <div class="card-divider">
+                        <!-- <div class="card-divider">
                             This is the map area.  Need a title.
-                        </div>
+                        </div> -->
                         <!--pseudo-code for adding an image-->
-                        <img id="map-pic" src="assets/images/google_map_pic.png">
+                        <!-- <img id="map-pic" src="assets/images/google_map_pic.png"> -->
+                        <div id="map"></div>
                         <!--class of "card-section" needs to be applied to create a text section in the Foundation card-->
-                        <div class="card-section">
+                        <!-- <div class="card-section">
                             Do we want any text, such as the written directions, under the Google Map?
-                        </div>
+                        </div> -->
                         <!--hard code end-->
 
-                    </div>
+                    <!-- </div> -->
 
-                </div>
+                <!-- </div> -->
 
             </div>
         </div>
     </main>
 
     <script src="https://use.fontawesome.com/releases/v5.14.0/js/all.js" data-auto-replace-svg="nest"></script>
-    <!-- <script src="./assets/js/script.js"></script> -->
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
