--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Compressed CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css" integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css"
+        integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>City Learner</title>
 </head>
@@ -46,7 +47,7 @@
                     </label>
 
                     <!--event options pull-down-->
-                    <label>Type of Event  // this shows the multi-select version
+                    <label>Type of Event // this shows the multi-select version
                         <!--would be awesome if we could dynamically create the options-->
                         <select multiple>
                             <option value="outdoor">Outdoor</option>
@@ -67,7 +68,7 @@
                             <button class="button expanded">Anaheim</button>
                             <!--hard code end-->
 
-                         </ul>
+                        </ul>
                     </div>
 
                 </div>
@@ -82,14 +83,15 @@
                     <!--delete all hard coded code and text when functionality has been added.-->
                     <!--class of "card-divider" needs to be used to create a card header in Foundation styling-->
                     <div class="card-divider">
-                        Itinerary for Los Angeles.  
+                        Itinerary for Los Angeles.
                     </div>
                     <!--class of "card-section" needs to be applied to create a text section in the Foundation card-->
                     <div class="card-section">
-                        <a href="https://www.dunekitchen.com/" class="button event">12:00  Lunch</a>
-                        <a href="https://www.laparks.org/griffithpark/griffith-park-home-page" class="button event"> 2:00  Griffith Park</a>
-                        <a href="http://parksbbq.com/home/" class="button event"> 5:00  Parks BBQ </a>
-                        <a href="https://www.hollywoodbowl.com/" class="button event"> 8:00  Hollywood Bowl</a>
+                        <a href="https://www.dunekitchen.com/" class="button event">12:00 Lunch</a>
+                        <a href="https://www.laparks.org/griffithpark/griffith-park-home-page" class="button event">
+                            2:00 Griffith Park</a>
+                        <a href="http://parksbbq.com/home/" class="button event"> 5:00 Parks BBQ </a>
+                        <a href="https://www.hollywoodbowl.com/" class="button event"> 8:00 Hollywood Bowl</a>
                         <div>These are buttons that we could link to the respective webpage?</div>
                     </div>
                     <!--hard code end-->
@@ -101,61 +103,35 @@
             <div class="cell small-12 medium-4">
 
                 <!--column 3 wrapper-->
-<<<<<<< HEAD
-                <div class="column-3">
-
-                    <div id="map-area" class="card map-area">
-=======
                 <!-- <div class="column-3">
 
                     <div id="map-area" class="card map-area"> -->
->>>>>>> 4dd011dabd4319696f62a6f82d373da61efec8f4
 
-                        <!--hard code start-->
-                        <!--delete all hard coded code and text when functionality has been added.-->
-                        <!--class of "card-divider" needs to be used to create a card header in Foundation styling-->
-<<<<<<< HEAD
-                        <div class="card-divider">
-                            This is the map area.  Need a title.
-                        </div>
-                        <!--pseudo-code for adding an image-->
-                        <img id="map-pic" src="assets/images/google_map_pic.png">
-                        <!--class of "card-section" needs to be applied to create a text section in the Foundation card-->
-                        <div class="card-section">
-                            Do we want any text, such as the written directions, under the Google Map?
-                        </div>
-                        <!--hard code end-->
-
-                    </div>
-
-                </div>
-=======
-                        <!-- <div class="card-divider">
+                <!--hard code start-->
+                <!--delete all hard coded code and text when functionality has been added.-->
+                <!--class of "card-divider" needs to be used to create a card header in Foundation styling-->
+                <!-- <div class="card-divider">
                             This is the map area.  Need a title.
                         </div> -->
-                        <!--pseudo-code for adding an image-->
-                        <!-- <img id="map-pic" src="assets/images/google_map_pic.png"> -->
-                        <div id="map"></div>
-                        <!--class of "card-section" needs to be applied to create a text section in the Foundation card-->
-                        <!-- <div class="card-section">
+                <!--pseudo-code for adding an image-->
+                <!-- <img id="map-pic" src="assets/images/google_map_pic.png"> -->
+                <div id="map"></div>
+                <!--class of "card-section" needs to be applied to create a text section in the Foundation card-->
+                <!-- <div class="card-section">
                             Do we want any text, such as the written directions, under the Google Map?
                         </div> -->
-                        <!--hard code end-->
-
-                    <!-- </div> -->
+                <!--hard code end-->
 
                 <!-- </div> -->
->>>>>>> 4dd011dabd4319696f62a6f82d373da61efec8f4
+
+                <!-- </div> -->
 
             </div>
         </div>
     </main>
 
     <script src="https://use.fontawesome.com/releases/v5.14.0/js/all.js" data-auto-replace-svg="nest"></script>
-<<<<<<< HEAD
-    <!-- <script src="./assets/js/script.js"></script> -->
-=======
     <script src="./assets/js/script.js"></script>
->>>>>>> 4dd011dabd4319696f62a6f82d373da61efec8f4
 </body>
+
 </html>
