--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
         </div>
     </main>
 
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://use.fontawesome.com/releases/v5.14.0/js/all.js" data-auto-replace-svg="nest"></script>
     <script src="./assets/js/script.js"></script>
 </body>
