Feature/user input (#28)
* Develop (#27)

* added code to delete old buttons when searching again

* updated code to delete old buttons

* added skeleton html and basic css

* Adding new mockup to develop branch (#22)

* Feature/base code (#5)

* added code to delete old buttons when searching again

* updated code to delete old buttons

* updated html to new mock-up

Co-authored-by: reynolkb <57142369+reynolkb@users.noreply.github.com>

* Feature/pseudo code (#26)

* Feature/base code (#5)

* added code to delete old buttons when searching again

* updated code to delete old buttons

* Updated html to new mockup (#20)

* added code to delete old buttons when searching again

* updated code to delete old buttons

* added skeleton html and basic css

* updated html to new mock-up

Co-authored-by: Kyle Reynolds <kyle.reynolds9146@gmail.com>
Co-authored-by: ginomaglaqueucla <68166953+ginomaglaqueucla@users.noreply.github.com>

* adding in api logic with geocoding, trip advisor and google maps (#23)

* Implemented pseudo code

Co-authored-by: reynolkb <57142369+reynolkb@users.noreply.github.com>
Co-authored-by: plainjane99 <69064501+plainjane99@users.noreply.github.com>
Co-authored-by: Kyle Reynolds <kyle.reynolds9146@gmail.com>

Co-authored-by: Kyle Reynolds <kyle.reynolds9146@gmail.com>
Co-authored-by: Plain Jane <jane99hsu@gmail.com>
Co-authored-by: plainjane99 <69064501+plainjane99@users.noreply.github.com>
Co-authored-by: reynolkb <57142369+reynolkb@users.noreply.github.com>

* Created getUserInput function and establish object data structure for entire project

* updated city function to use object data structure

* updated restaurants function to use object data structure

* updated attractions function to use object data structure

* updated create map function to use object data structure

* put error handling in getUserInput function

* grabbed city user input, updated all functions to use objec

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
                     <!--search input area-->
                     <form id="search-form" class="search-form">
+                        <p id="invalid-city" class="invalid-search hide">not a valid city</p>
                         <label>Search by City:</label>
                         <input id="city-input" class="city-input">
                         <button id="search-button" class="search-button">
@@ -130,6 +131,7 @@
         </div>
     </main>
 
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://use.fontawesome.com/releases/v5.14.0/js/all.js" data-auto-replace-svg="nest"></script>
     <script src="./assets/js/script.js"></script>
 </body>
