--- a/index.html
+++ b/index.html
@@ -77,28 +77,7 @@
             </div>
 
             <!--column 2: itinerary area-->
-            <div class="cell small-12 medium-4">
-                <div id="itinerary" class="card itinerary">
-
-                    <!--hard code start-->
-                    <!--delete all hard coded code and text when functionality has been added.-->
-                    <!--class of "card-divider" needs to be used to create a card header in Foundation styling-->
-                    <div class="card-divider">
-                        Itinerary for Los Angeles.
-                    </div>
-                    <!--class of "card-section" needs to be applied to create a text section in the Foundation card-->
-                    <div class="card-section">
-                        <a href="https://www.dunekitchen.com/" class="button event">12:00 Lunch</a>
-                        <a href="https://www.laparks.org/griffithpark/griffith-park-home-page" class="button event">
-                            2:00 Griffith Park</a>
-                        <a href="http://parksbbq.com/home/" class="button event"> 5:00 Parks BBQ </a>
-                        <a href="https://www.hollywoodbowl.com/" class="button event"> 8:00 Hollywood Bowl</a>
-                        <div>These are buttons that we could link to the respective webpage?</div>
-                    </div>
-                    <!--hard code end-->
-
-                </div>
-            </div>
+            <div id="column-two" class="cell small-12 medium-4"></div>
 
             <!--column 3: map area that shows the directions from place to place-->
             <div class="cell small-12 medium-4">
