--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="hero">
-        <h1 class="title">City Learner</h1>
+        <h1 class="title">City Explorer</h1>
     </header>
 
     <main>
