added catches for random number errors

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css"
         integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>City Learner</title>
+    <title>City Explorer</title>
 </head>
 
 <body>
     <header class="hero">
-        <h1 class="title">City Learner</h1>
+        <h1 class="title">City Explorer</h1>
     </header>
 
     <main>
