--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- Compressed CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css"
         integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
+    <div id="map-script-container"></div>
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>City Explorer</title>
 </head>
