--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="hero">
-        <h1 class="title">City Learner</h1>
+        <h1 class="title">City Explorer</h1>
     </header>
 
     <main>
@@ -60,16 +60,7 @@
 
                     <!--saved itinerary area-->
                     <div class="save-area">
-                        <ul id="saved-itinerary" class="saved-itinerary">
-
-                            <!--hard code start-->
-                            <!--delete all hard coded code when functionality has been added.-->
-                            <!--class of "button" needs to be used on button element in Foundation buttons-->
-                            <button class="button expanded">Los Angeles</button>
-                            <button class="button expanded">Anaheim</button>
-                            <!--hard code end-->
-
-                        </ul>
+                        <ul id="search-history-buttons" class="saved-itinerary"></ul>
                     </div>
 
                 </div>
