--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
             <div class="cell small-12 medium-4">
 
                 <!--column 3 wrapper-->
-                <!-- <div class="column-3">
-
-                    <div id="map-area" class="card map-area"> -->
+                <!-- <div class="column-3" id="map-container"> -->
+                    <div class="column-3" id="map"></div>
+                <!-- </div> -->
+                    <!-- <div id="map-area" class="card map-area"> -->
 
                 <!--hard code start-->
                 <!--delete all hard coded code and text when functionality has been added.-->
@@ -90,12 +91,12 @@
                         </div> -->
                 <!--pseudo-code for adding an image-->
                 <!-- <img id="map-pic" src="assets/images/google_map_pic.png"> -->
-                <div id="map"></div>
+                
                 <!--class of "card-section" needs to be applied to create a text section in the Foundation card-->
                 <!-- <div class="card-section">
                             Do we want any text, such as the written directions, under the Google Map?
-                        </div> -->
-                <!--hard code end-->
+                </div>
+                ard code end-->
 
                 <!-- </div> -->
 
