fixed map and filtering errors

--- a/index.html
+++ b/index.html
@@ -105,10 +105,12 @@
             </div>
         </div>
     </main>
-    <div id="map-script-container"></div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://use.fontawesome.com/releases/v5.14.0/js/all.js" data-auto-replace-svg="nest"></script>
+    <!-- <div id="map-script-container"></div> -->
     <script src="./assets/js/script.js"></script>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCv_iF_YniNOH9mI6WvJc66w5bo3_PXXCg&callback=initMap"></script>
 </body>
 
 </html>
