added colors and styling

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="grid-x grid-margin-x grid-margin-y container">
 
             <!--column 1: city input, food pull-down, event pull-down, saved itineraries-->
-            <div class="cell small-12 medium-4">
+            <div class="cell small-12 medium-2">
 
                 <!--column 1 wrapper-->
                 <div class="column-1">
@@ -29,7 +29,7 @@
                     <!--search input area-->
                     <form id="search-form" class="search-form">
                         <p id="invalid-city" class="invalid-search hide">not a valid city</p>
-                        <label>Search by City, State (2 Letter Code):</label>
+                        <label>Search by City, State</br>(2 Letter Code):</label>
                         <input id="city-input" class="city-input" placeholder="ex. Los Angeles, CA">
                         <button id="search-button" class="search-button">
                             <i class="fas fa-search"></i>
@@ -75,11 +75,11 @@
             <div id="column-two" class="cell small-12 medium-4"></div>
 
             <!--column 3: map area that shows the directions from place to place-->
-            <div class="cell small-12 medium-4">
+            <div class="cell small-12 medium-6">
 
                 <!--column 3 wrapper-->
                 <!-- <div class="column-3" id="map-container"> -->
-                <div class="column-3" id="map"></div>
+                <div id="map"></div>
                 <!-- </div> -->
                 <!-- <div id="map-area" class="card map-area"> -->
 
