got rid of long/lat undefined errors and added multiple filter functionality

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- Compressed CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css"
         integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
+    <div id="map-script-container"></div>
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>City Explorer</title>
 </head>
@@ -21,7 +22,7 @@
         <div class="grid-x grid-margin-x grid-margin-y container">
 
             <!--column 1: city input, food pull-down, event pull-down, saved itineraries-->
-            <div class="cell small-12 medium-2">
+            <div class="cell small-12 large-3">
 
                 <!--column 1 wrapper-->
                 <div class="column-1">
@@ -72,35 +73,12 @@
             </div>
 
             <!--column 2: itinerary area-->
-            <div id="column-two" class="cell small-12 medium-4"></div>
+            <div id="column-two" class="cell small-12 large-3"></div>
 
             <!--column 3: map area that shows the directions from place to place-->
-            <div class="cell small-12 medium-6">
+            <div id="map-container" class="cell small-12 large-6">
 
-                <!--column 3 wrapper-->
-                <!-- <div class="column-3" id="map-container"> -->
                 <div id="map"></div>
-                <!-- </div> -->
-                <!-- <div id="map-area" class="card map-area"> -->
-
-                <!--hard code start-->
-                <!--delete all hard coded code and text when functionality has been added.-->
-                <!--class of "card-divider" needs to be used to create a card header in Foundation styling-->
-                <!-- <div class="card-divider">
-                            This is the map area.  Need a title.
-                        </div> -->
-                <!--pseudo-code for adding an image-->
-                <!-- <img id="map-pic" src="assets/images/google_map_pic.png"> -->
-
-                <!--class of "card-section" needs to be applied to create a text section in the Foundation card-->
-                <!-- <div class="card-section">
-                            Do we want any text, such as the written directions, under the Google Map?
-                </div>
-                ard code end-->
-
-                <!-- </div> -->
-
-                <!-- </div> -->
 
             </div>
         </div>
