Feature/search history style (#47)
* Feature/local storage (#39)

* Develop (#27)

* added code to delete old buttons when searching again

* updated code to delete old buttons

* added skeleton html and basic css

* Adding new mockup to develop branch (#22)

* Feature/base code (#5)

* added code to delete old buttons when searching again

* updated code to delete old buttons

* updated html to new mock-up

Co-authored-by: reynolkb <57142369+reynolkb@users.noreply.github.com>

* Feature/pseudo code (#26)

* Feature/base code (#5)

* added code to delete old buttons when searching again

* updated code to delete old buttons

* Updated html to new mockup (#20)

* added code to delete old buttons when searching again

* updated code to delete old buttons

* added skeleton html and basic css

* updated html to new mock-up

Co-authored-by: Kyle Reynolds <kyle.reynolds9146@gmail.com>
Co-authored-by: ginomaglaqueucla <68166953+ginomaglaqueucla@users.noreply.github.com>

* adding in api logic with geocoding, trip advisor and google maps (#23)

* Implemented pseudo code

Co-authored-by: reynolkb <57142369+reynolkb@users.noreply.github.com>
Co-authored-by: plainjane99 <69064501+plainjane99@users.noreply.github.com>
Co-authored-by: Kyle Reynolds <kyle.reynolds9146@gmail.com>

Co-authored-by: Kyle Reynolds <kyle.reynolds9146@gmail.com>
Co-authored-by: Plain Jane <jane99hsu@gmail.com>
Co-authored-by: plainjane99 <69064501+plainjane99@users.noreply.github.com>
Co-authored-by: reynolkb <57142369+reynolkb@users.noreply.github.com>

* added basic display function & local storage

* corrected local storage function for active searches

* added/corrected dynamically-created buttons from local storage/active search

* added functionality to load search history itinerary

* restructured functions to prevent re-creating search-history buttons

* added coordinate data to save object

Co-authored-by: ginomaglaqueucla <681

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- Compressed CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css"
         integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
+    <div id="map-script-container"></div>
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>City Explorer</title>
 </head>
@@ -28,14 +29,11 @@
 
                     <!--search input area-->
                     <form id="search-form" class="search-form">
-                        <p id="invalid-city" class="invalid-search hide">not a valid city</p>
                         <label>Search by City, State</br>(2 Letter Code):</label>
+                        <p id="invalid-city" class="invalid-search hide">Not a valid city or improper format</p>
                         <input id="city-input" class="city-input" placeholder="ex. Los Angeles, CA">
                         <button id="search-button" class="search-button">
                             <i class="fas fa-search"></i>
-                        </button>
-                        <button type="button" id="clear-cities">
-                            <i class="fas fa-trash"></i>
                         </button>
                     </form>
 
@@ -61,7 +59,12 @@
                     </label>
 
                     <!--saved itinerary area-->
-                    <div class="save-area">
+                    <div>
+                        <h3 id="history-title">
+                            <button type="button" id="clear-cities"></button>
+                        </h3>
+                    </div>
+                    <div class="save-area" id="save-area">
                         <ul id="search-history-buttons" class="saved-itinerary"></ul>
                     </div>
 
