Feature/develop ready (#48)
* got rid of long/lat undefined errors and added multiple filter functionality

* updated errors

* fixed duplicates for filter

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
                     <!--saved itinerary area-->
                     <div>
                         <h3 id="history-title">
-                            <button type="button" id="clear-cities"></button>
+                            Search History
+                            <button type="button" id="clear-cities"><i class='fas fa-trash'></i></button>
                         </h3>
                     </div>
                     <div class="save-area" id="save-area">
